--- a/src/Orchard.Web/Web.config
+++ b/src/Orchard.Web/Web.config
@@ -16,7 +16,8 @@
 
         <!-- Optional additional comma-separated list of folders for Modules or Themes -->
         <!-- Note: Themes that are not under ~/Themes/ should have web.config with appropriate access permissions. -->
-
+        <add key="Modules" value="~/Ibn_Modules,~/Customer1/Modules"/>
+        <add key="Themes" value="~/Themes/MoreThemes,~/Customer1/Themes" />
         <!--
         <add key="Modules" value="~/Ibn_Modules,~/Customer1/Modules"/>
         <add key="Themes" value="~/Themes/MoreThemes,~/Customer1/Themes" />
